--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                     <p class="small-text">
                         <span>Sini aku ajari masak</span>
                         <span>Scroll nya pelan pelan aja biar bisa hehe</span>
+			<span>Maaf Gak ada lagunya. Udah mepet soalnya hehe. Lavyu</span>
                     </p>
                 </div>
                 <div class="egg-stop">
